@@ -1,7 +1,7 @@
 /*
  * The Apache Software License, Version 1.1
  *
- * Copyright (c) 2001-2002 The Apache Software Foundation.  All rights
+ * Copyright (c) 2001-2003 The Apache Software Foundation.  All rights
  * reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -112,7 +112,8 @@ public class Gcj extends DefaultCompilerAdapter {
             classpath.append(src);
         }
 
-        cmd.setExecutable("gcj");
+        String exec = getJavac().getExecutable();
+        cmd.setExecutable(exec == null ? "gcj" : exec);
 
         if (destDir != null) {
             cmd.createArgument().setValue("-d");
